optimize link logic

--- a/Android/scenes/show/src/main/res/drawable/show_pk_or_link_status_bg.xml
+++ b/Android/scenes/show/src/main/res/drawable/show_pk_or_link_status_bg.xml
@@ -4,5 +4,6 @@
 
     <size android:width="200dp" android:height="30dp"/>
     <solid android:color="@color/grey_ec"/>
+    <corners android:radius="5dp"/>
 
 </shape>
