--- a/Android/scenes/show/src/main/res/layout/show_live_link_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_dialog.xml
@@ -26,7 +26,8 @@
             android:gravity="center"
             android:text="@string/show_linking_request_message"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/rBtnOnlineUser"
