--- a/Android/scenes/show/src/main/res/layout/show_live_link_invitation_message_list.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_invitation_message_list.xml
@@ -52,6 +52,16 @@
             android:layout_height="wrap_content" />
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/linkRequestListEmptyImg"
+        android:layout_width="147dp"
+        android:layout_height="93dp"
+        android:layout_marginTop="80dp"
+        android:src="@mipmap/show_link_empty"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textLinking" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/linkRequestListEmpty"
         android:layout_width="wrap_content"
