--- a/Android/scenes/show/src/main/res/layout/show_live_link_request_message.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_request_message.xml
@@ -5,13 +5,24 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/user_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="22dp"
+        android:text="1"
+        android:textSize="14dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/cover_user_icon"
         android:layout_width="44dp"
         android:layout_height="44dp"
-        android:layout_marginStart="22dp"
+        android:layout_marginStart="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/user_num"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -31,7 +42,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_item_agree_request"
-        style="@style/def_btn_full"
+        android:background="@drawable/show_pk_or_link_btn_bg"
         android:layout_width="56dp"
         android:layout_height="28dp"
         android:layout_marginEnd="25dp"
@@ -47,6 +58,6 @@
         android:layout_height="1dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="14dp"
-        android:background="@color/white_20_percent"
+        android:background="@color/grey_e1"
         app:layout_constraintTop_toBottomOf="@id/cover_user_icon" />
 </androidx.constraintlayout.widget.ConstraintLayout>
