--- a/Android/scenes/show/src/main/res/values/colors.xml
+++ b/Android/scenes/show/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="show_deliver">#EFEFEF</color>
+    <drawable name="show_purple">#684BF2</drawable>
 </resources>
