--- a/Android/scenes/show/src/main/res/layout/show_live_pk_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_pk_dialog.xml
@@ -2,52 +2,32 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/show_live_dialog_view_bg"
     android:orientation="vertical">
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        android:checkedButton="@id/rBtnRequestMessage"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.appcompat.widget.AppCompatRadioButton
-            android:id="@+id/rBtnRequestMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:button="@null"
-            android:gravity="center"
-            android:text="@string/show_online_boardcaster"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-    </RadioGroup>
-
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/rBtnRequestText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="25dp"
-        android:text=""
-        android:textColor="@color/def_text_grey_979"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@id/radioGroup"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/radioGroup"
-        tools:ignore="SmallSp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="23dp"
+        android:button="@null"
+        android:gravity="center"
+        android:text="@string/show_linking_request_message"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="500dp"
+        android:layout_marginTop="16dp"
         android:overScrollMode="never"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/radioGroup" />
+        app:layout_constraintTop_toBottomOf="@id/rBtnRequestText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
