--- a/Android/scenes/show/src/main/res/layout/show_live_link_audience.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_audience.xml
@@ -43,8 +43,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:background="@mipmap/ic_close"
-        android:src="@mipmap/ic_close"
+        android:background="@mipmap/show_live_bottom_ic_linking"
+        android:src="@mipmap/show_live_bottom_ic_linking"
         app:layout_constraintBottom_toBottomOf="@id/textLinking"
         app:layout_constraintEnd_toEndOf="@id/textLinking"
         app:layout_constraintTop_toTopOf="@id/textLinking" />
@@ -66,8 +66,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:background="@mipmap/ic_close"
-        android:src="@mipmap/ic_close"
+        android:background="@mipmap/show_cancel_link_apply"
+        android:src="@mipmap/show_cancel_link_apply"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@id/textLinking"
         app:layout_constraintEnd_toEndOf="@id/textLinking"
@@ -97,12 +97,23 @@
         app:layout_constraintEnd_toEndOf="@id/textLinking"
         app:layout_constraintTop_toTopOf="@id/textLinking" />
 
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="20dp"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="20dp"
+        android:text="待上麦队列"
+        app:layout_constraintTop_toBottomOf="@id/textLinking"/>
+
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:id="@+id/smart_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textLinking">
+        app:layout_constraintTop_toBottomOf="@id/text">
 
         <com.scwang.smart.refresh.header.ClassicsHeader
             android:layout_width="match_parent"
