--- a/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_view.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/video_container"
     android:layout_width="109dp"
     android:layout_height="163dp"
-    android:background="@drawable/show_live_link_view_bg">
+    app:cardCornerRadius="20dp"
+    app:cardBackgroundColor="@color/show_view">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/cover_audience_icon"
         android:layout_width="51dp"
         android:layout_height="51dp"
         android:layout_marginStart="28dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/cover_audience_id"
         android:layout_width="71dp"
         android:layout_height="34dp"
         android:layout_marginStart="19dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="85dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
