--- a/Android/app/src/main/res/layout/app_fragment_home_index.xml
+++ b/Android/app/src/main/res/layout/app_fragment_home_index.xml
@@ -26,7 +26,7 @@
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
         app:spanCount="2"
-        tools:listitem="@layout/item_home_index"
+        tools:listitem="@layout/app_item_home_index"
         android:paddingHorizontal="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
