--- a/Android/scenes/show/src/main/res/layout/show_live_detail_video_pk.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_video_pk.xml
@@ -3,6 +3,58 @@
     android:id="@+id/video_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_5B">
+    android:background="@mipmap/show_pk_bg">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/iPKTimeText"
+            android:layout_width="98dp"
+            android:layout_height="23dp"
+            android:layout_marginTop="109dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="@string/show_pk"
+            android:textColor="@color/white"
+            android:background="@mipmap/show_pk_time_bg">
+        </androidx.appcompat.widget.AppCompatTextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="288dp"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+
+            <TextureView
+                android:id="@+id/iBroadcasterAView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+            </TextureView>
+
+            <TextureView
+                android:id="@+id/iBroadcasterBView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+            </TextureView>
+
+        </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/iPKProcessBar"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_gravity="center"
+            android:layout_width="355dp"
+            android:layout_height="12dp"
+            android:layout_marginTop="10dp"
+            android:progress="50"
+            android:progressDrawable="@drawable/show_pk_progress_bg"/>
+
+    </LinearLayout>
 
 </FrameLayout>
