--- a/Android/scenes/show/src/main/res/layout/show_live_link_request_message.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_request_message.xml
@@ -49,6 +49,7 @@
         android:text="@string/show_agree_onseat"
         android:textColor="@android:color/white"
         android:textSize="12sp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@id/cover_user_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/cover_user_icon" />
