--- a/Android/scenes/show/src/main/res/layout/show_live_pk_request_message_list.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_pk_request_message_list.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/show_pk_or_link_status_bg"
         android:drawablePadding="8dp"
         android:gravity="center_vertical"
-        android:hint="@string/show_pking"
+        android:hint="@string/show_can_pk"
         android:imeOptions="actionSearch"
         android:maxLines="1"
         android:paddingHorizontal="15dp"
@@ -22,6 +22,7 @@
         android:textColor="@color/black"
         android:textColorHint="@color/text_color_66"
         android:textSize="14sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,6 +34,7 @@
         android:layout_marginEnd="6dp"
         android:text="@string/show_stop_pking"
         android:textColor="@drawable/show_purple"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/textPking"
         app:layout_constraintEnd_toStartOf="@id/iBtnStopPK"
         app:layout_constraintTop_toTopOf="@id/textPking" />
@@ -44,6 +46,7 @@
         android:layout_marginEnd="8dp"
         android:background="@mipmap/close"
         android:src="@mipmap/ic_close"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/textPking"
         app:layout_constraintEnd_toEndOf="@id/textPking"
         app:layout_constraintTop_toTopOf="@id/textPking" />
