--- a/Android/scenes/show/src/main/res/layout/show_live_pk_request_message.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_pk_request_message.xml
@@ -23,7 +23,7 @@
         android:ellipsize="marquee"
         android:gravity="start|center_vertical"
         android:singleLine="true"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="15sp"
         app:layout_constraintEnd_toStartOf="@id/btn_item_request"
         app:layout_constraintStart_toEndOf="@+id/cover_boardcaster_icon"
