--- a/Android/scenes/show/src/main/res/layout/show_setting_preset_dialog.xml
+++ b/Android/scenes/show/src/main/res/layout/show_setting_preset_dialog.xml
@@ -118,6 +118,7 @@
                         android:gravity="center"
                         android:text="@string/show_setting_preset_device_low_des"
                         android:textColor="#6D7291"
+                        android:visibility="gone"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -132,6 +133,7 @@
                         android:gravity="center"
                         android:paddingHorizontal="6dp"
                         android:text="@string/show_setting_preset_recommend"
+                        android:visibility="gone"
                         android:textColor="#CE27FB"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="@+id/showLowDeviceDes"
@@ -172,6 +174,7 @@
                         android:gravity="center"
                         android:text="@string/show_setting_preset_device_medium_des"
                         android:textColor="#6D7291"
+                        android:visibility="gone"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -212,6 +215,7 @@
                         android:text="@string/show_setting_preset_device_high_des"
                         android:textColor="#6D7291"
                         android:textSize="12sp"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
