--- a/Android/scenes/show/src/main/res/layout/show_live_link_audience.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_link_audience.xml
@@ -27,27 +27,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/iBtnSeatApplyText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="6dp"
-        android:text="@string/show_apply_onseat"
-        android:textColor="@drawable/show_purple"
-        app:layout_constraintBottom_toBottomOf="@id/textLinking"
-        app:layout_constraintEnd_toStartOf="@id/iBtnSeatApply"
-        app:layout_constraintTop_toTopOf="@id/textLinking" />
+<!--    <androidx.appcompat.widget.AppCompatTextView-->
+<!--        android:id="@+id/iBtnSeatApplyText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginEnd="6dp"-->
+<!--        android:text="@string/show_apply_onseat"-->
+<!--        android:textColor="@drawable/show_purple"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/textLinking"-->
+<!--        app:layout_constraintEnd_toStartOf="@id/iBtnSeatApply"-->
+<!--        app:layout_constraintTop_toTopOf="@id/textLinking" />-->
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/iBtnSeatApply"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:background="@mipmap/show_live_bottom_ic_linking"
-        android:src="@mipmap/show_live_bottom_ic_linking"
-        app:layout_constraintBottom_toBottomOf="@id/textLinking"
-        app:layout_constraintEnd_toEndOf="@id/textLinking"
-        app:layout_constraintTop_toTopOf="@id/textLinking" />
+<!--    <androidx.appcompat.widget.AppCompatImageButton-->
+<!--        android:id="@+id/iBtnSeatApply"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        android:background="@mipmap/show_live_bottom_ic_linking"-->
+<!--        android:src="@mipmap/show_live_bottom_ic_linking"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/textLinking"-->
+<!--        app:layout_constraintEnd_toEndOf="@id/textLinking"-->
+<!--        app:layout_constraintTop_toTopOf="@id/textLinking" />-->
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/iBtnCancelApplyText"
@@ -90,8 +90,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:background="@mipmap/ic_close"
-        android:src="@mipmap/ic_close"
+        android:background="@mipmap/show_stop_link_or_pk_btn"
+        android:src="@mipmap/show_stop_link_or_pk_btn"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@id/textLinking"
         app:layout_constraintEnd_toEndOf="@id/textLinking"
